--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 14:54:10.871486",
+  "@@last_modified": "2025-12-01 12:40:51.296376",
   "about": "সম্পর্কে",
   "@about": {
     "type": "String",
@@ -11685,6 +11685,26 @@
   },
   "practiceActivityCompleted": "অভ্যাস কার্যক্রম সম্পন্ন",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "পরিচয় চ্যাট তৈরি করুন",
+  "introChatDesc": "স্পেসের যে কেউ পোস্ট করতে পারে।",
+  "announcementsChatTitle": "ঘোষণার চ্যাট",
+  "announcementsChatDesc": "শুধুমাত্র স্পেস প্রশাসক পোস্ট করতে পারে।",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
