--- a/lib/l10n/intl_fil.arb
+++ b/lib/l10n/intl_fil.arb
@@ -2791,7 +2791,7 @@
   "selectAll": "Piliin lahat",
   "deselectAll": "Huwag piliin lahat",
   "@@locale": "fil",
-  "@@last_modified": "2025-11-20 14:54:01.155789",
+  "@@last_modified": "2025-12-01 12:40:26.597168",
   "@setCustomPermissionLevel": {
     "type": "String",
     "placeholders": {}
@@ -11557,6 +11557,26 @@
   },
   "practiceActivityCompleted": "Natapos ang aktibidad sa pagsasanay",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Lumikha ng Introductions Chat",
+  "introChatDesc": "Sinuman sa espasyo ay maaaring mag-post.",
+  "announcementsChatTitle": "Announcements Chat",
+  "announcementsChatDesc": "Tanging ang admin ng espasyo ang maaaring mag-post.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
