--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "fr",
-  "@@last_modified": "2025-11-20 14:54:22.927028",
+  "@@last_modified": "2025-12-01 12:41:17.297464",
   "about": "À propos",
   "@about": {
     "type": "String",
@@ -10905,6 +10905,26 @@
   },
   "practiceActivityCompleted": "Activité de pratique terminée",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Créer un chat d'introduction",
+  "introChatDesc": "Tout le monde dans l'espace peut publier.",
+  "announcementsChatTitle": "Chat des annonces",
+  "announcementsChatDesc": "Seul l'administrateur de l'espace peut publier.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
