--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -1915,7 +1915,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2025-11-20 14:53:56.300239",
+  "@@last_modified": "2025-12-01 12:40:15.499665",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11680,6 +11680,26 @@
   },
   "practiceActivityCompleted": "Практычная дзейнасць завершана",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Стварыць чат для ўвядзення",
+  "introChatDesc": "Кожны ў прасторы можа публікаваць.",
+  "announcementsChatTitle": "Чат аб'яў",
+  "announcementsChatDesc": "Толькі адміністратар прасторы можа публікаваць.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
