--- a/lib/l10n/intl_ga.arb
+++ b/lib/l10n/intl_ga.arb
@@ -4521,7 +4521,7 @@
   "playWithAI": "Imir le AI faoi láthair",
   "courseStartDesc": "Tá Bot Pangea réidh chun dul am ar bith!\n\n...ach is fearr foghlaim le cairde!",
   "@@locale": "ga",
-  "@@last_modified": "2025-11-20 14:54:22.114918",
+  "@@last_modified": "2025-12-01 12:41:14.642020",
   "@customReaction": {
     "type": "String",
     "placeholders": {}
@@ -10579,6 +10579,26 @@
   },
   "practiceActivityCompleted": "Críochnaíodh an gníomhaíocht chleachtais",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Cruthaigh Comhrá Réamhrá",
+  "introChatDesc": "Is féidir le haon duine sa spás post a chur.",
+  "announcementsChatTitle": "Comhrá Fógraí",
+  "announcementsChatDesc": "Ní féidir ach le hoifigeach spáis post a chur.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
