--- a/lib/l10n/intl_gl.arb
+++ b/lib/l10n/intl_gl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "gl",
-  "@@last_modified": "2025-11-20 14:53:32.298371",
+  "@@last_modified": "2025-12-01 12:39:28.351166",
   "about": "Acerca de",
   "@about": {
     "type": "String",
@@ -10578,6 +10578,26 @@
   },
   "practiceActivityCompleted": "Actividade de práctica completada",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Crear Chat de Presentación",
+  "introChatDesc": "Qualquera no espazo pode publicar.",
+  "announcementsChatTitle": "Chat de Anuncios",
+  "announcementsChatDesc": "Sólo o administrador do espazo pode publicar.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
