--- a/lib/l10n/intl_hr.arb
+++ b/lib/l10n/intl_hr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hr",
-  "@@last_modified": "2025-11-20 14:53:43.599159",
+  "@@last_modified": "2025-12-01 12:39:46.878014",
   "about": "Informacije",
   "@about": {
     "type": "String",
@@ -10953,6 +10953,26 @@
   },
   "practiceActivityCompleted": "Aktivnost vježbanja završena",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Kreiraj chat za uvod",
+  "introChatDesc": "Svako u prostoru može objavljivati.",
+  "announcementsChatTitle": "Chat za obavijesti",
+  "announcementsChatDesc": "Samo administrator prostora može objavljivati.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
