--- a/lib/l10n/intl_ia.arb
+++ b/lib/l10n/intl_ia.arb
@@ -1962,7 +1962,7 @@
   "playWithAI": "Joca con le IA pro ora",
   "courseStartDesc": "Pangea Bot es preste a comenzar a qualunque momento!\n\n...ma apprender es melior con amicos!",
   "@@locale": "ia",
-  "@@last_modified": "2025-11-20 14:53:45.693586",
+  "@@last_modified": "2025-12-01 12:39:51.766931",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11659,6 +11659,26 @@
   },
   "practiceActivityCompleted": "Praktiko aktivita finita",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Crea Chat de Introducciones",
+  "introChatDesc": "Cualquiera en el espacio puede publicar.",
+  "announcementsChatTitle": "Chat de Anuncios",
+  "announcementsChatDesc": "Solo el administrador del espacio puede publicar.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
