--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 14:53:30.116789",
+  "@@last_modified": "2025-12-01 12:39:24.159740",
   "about": "소개",
   "@about": {
     "type": "String",
@@ -10689,6 +10689,26 @@
   },
   "practiceActivityCompleted": "연습 활동이 완료되었습니다",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "소개 채팅 만들기",
+  "introChatDesc": "공간의 누구나 게시할 수 있습니다.",
+  "announcementsChatTitle": "공지사항 채팅",
+  "announcementsChatDesc": "오직 공간 관리자만 게시할 수 있습니다.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
