--- a/lib/l10n/intl_lt.arb
+++ b/lib/l10n/intl_lt.arb
@@ -3865,7 +3865,7 @@
   "playWithAI": "Žaiskite su dirbtiniu intelektu dabar",
   "courseStartDesc": "Pangea botas pasiruošęs bet kada pradėti!\n\n...bet mokymasis yra geresnis su draugais!",
   "@@locale": "lt",
-  "@@last_modified": "2025-11-20 14:54:05.562745",
+  "@@last_modified": "2025-12-01 12:40:39.006993",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11386,6 +11386,26 @@
   },
   "practiceActivityCompleted": "Praktikos veikla baigta",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Sukurti Įžangų Pokalbį",
+  "introChatDesc": "Bet kas erdvėje gali skelbti.",
+  "announcementsChatTitle": "Pranešimų Pokalbis",
+  "announcementsChatDesc": "Tik erdvės administratorius gali skelbti.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
