--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 14:54:13.498644",
+  "@@last_modified": "2025-12-01 12:40:57.541160",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11059,6 +11059,26 @@
   },
   "practiceActivityCompleted": "Övningsaktivitet slutförd",
   "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Skapa Introduktionschatt",
+  "introChatDesc": "Alla i rummet kan posta.",
+  "announcementsChatTitle": "Meddelanden Chatt",
+  "announcementsChatDesc": "Endast rumsadministratören kan posta.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
